<resources>
    <string name="app_name">NO!</string>
    <string name="phone">Phone</string>
    <string name="otp">OTP</string>
    <string name="sent_otp">Sent Otp</string>
    <string name="enter">Enter</string>
    <string name="verify_otp">Verify</string>
    <string name="default_country_code">+91</string>
    <string name="logo">Logo</string>
    <string name="back">Go Back</string>
    <string name="resent_sms">Resent SMS</string>
    <string name="welcome">Welcome!!</string>
    <string name="welcome_back">Welcome back!!</string>
    <string name="log_off">Log Off</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="action_image">action image</string>
</resources>
